# helper

./: .env  bun.lockb  components.d.ts  index.html  package.json  sqlite.db  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs
src/components/header/: index.vue
src/components/layout/menu/: index.vue
src/components/svgIcon/: index.vue
src/router/: index.ts
src/styles/: common.scss  element.scss  index.scss  variables.scss
src/utils/password/: random.ts
src/views/chat/: index.vue
src/views/home/: index.vue
src/views/settings/: index.vue
src/views/tools/: index.vue
src/views/tools/password/: index.vue
src/views/tools/terminal/: db.vue
